<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView android:text="@string/app_heading" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="75dp"
        android:textSize="20dp"
        android:id="@+id/textView"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:paddingLeft="75dp"
        android:paddingTop="40dp"
        android:id="@+id/buttonLayout">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/spotify"
            android:id="@+id/buttonSpotify"
            android:onClick="buttonOnClick"
            android:background="@color/orange"
            android:textStyle="bold" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:id="@+id/buttonScores"
            android:layout_marginTop="10dp"
            android:onClick="buttonOnClick"
            android:background="@color/orange"
            android:textStyle="bold" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:id="@+id/buttonLibrary"
            android:layout_marginTop="10dp"
            android:onClick="buttonOnClick"
            android:background="@color/orange"
            android:textStyle="bold" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/bigger"
            android:id="@+id/buttonBigger"
            android:background="@color/orange"
            android:onClick="buttonOnClick"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/reader"
            android:id="@+id/buttonReader"
            android:layout_marginTop="10dp"
            android:onClick="buttonOnClick"
            android:background="@color/orange"
            android:textStyle="bold" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/buttonCapstone"
            android:background="@color/pink"
            android:textColor="@color/white"
            android:onClick="buttonOnClick"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
